--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div id="container">
       <div class="inner">
 
-        <img class="size-medium aligncenter" src="../images/lessonthree_BW.png" alt=""/>
+        <img src="../images/lessonthree_BW.png" alt=""/>
+
+        <img class="appimage" src="../images/diamond_catch_icon175x175.png" alt=""/>
 
         <footer>
           <a href="mailto:info@lessonthree.com">info@lessonthree.com</a>
