--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
         <img class="appimage" src="../images/diamond_catch_icon175x175.png" alt=""/>
 
+        <img class="appimage" src="../images/send_idfa_icon175x175.png" alt=""/>
+
         <footer>
           <a href="mailto:info@lessonthree.com">info@lessonthree.com</a>
         </footer>
