--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <link rel="stylesheet" type="text/css" href="stylesheets/l3.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/simplegrid.css" media="screen">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -20,7 +21,18 @@
 
         <img src="../images/lessonthree_BW.png" alt=""/>
 
-        <img class="appimage" src="../images/diamond_catch_icon175x175.png" alt=""/>
+        <div class="grid grid-pad">
+            <div class="col-1-2">
+               <div class="content">
+                <img class="appimage" src="../images/diamond_catch_icon175x175.png" alt=""/>
+               </div>
+            </div>
+            <div class="col-1-2">
+               <div class="content">
+                Simple..
+               </div>
+            </div>
+        </div>
 
         <img class="appimage" src="../images/send_idfa_icon175x175.png" alt=""/>
 
