--- a/index.html
+++ b/index.html
@@ -24,17 +24,28 @@
         <div class="grid grid-pad">
             <div class="col-1-2">
                <div class="content">
-                <img class="appimage" src="../images/diamond_catch_icon175x175.png" alt=""/>
+                <img class="appimage" align="middle" src="../images/diamond_catch_icon175x175.png" alt=""/>
                </div>
             </div>
             <div class="col-1-2">
                <div class="content">
-                Simple..
+                Diamond catching!
                </div>
             </div>
         </div>
 
-        <img class="appimage" src="../images/send_idfa_icon175x175.png" alt=""/>
+        <div class="grid grid-pad">
+            <div class="col-1-2">
+               <div class="content">
+                <img class="appimage" align="middle" src="../images/send_idfa_icon175x175.png" alt=""/>
+               </div>
+            </div>
+            <div class="col-1-2">
+               <div class="content">
+                Access IDFA on iOS.
+               </div>
+            </div>
+        </div>
 
         <footer>
           <a href="mailto:info@lessonthree.com">info@lessonthree.com</a>
