--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         <div class="grid grid-pad">
             <div class="col-3-12">
                <div class="content">
-                <img class="appimage" align="middle" src="../images/diamond_catch_icon175x175.png" alt=""/>
+                <a href="https://itunes.apple.com/us/app/diamond-catch/id1070792509?mt=8"><img class="appimage" align="middle" src="../images/diamond_catch_icon175x175.png" alt=""/></a>
                </div>
             </div>
             <div class="col-9-12">
                <div class="content">
-                Diamond catching!
+                <p>Diamond catching!</p>
+                <p>Music from <a href="https://freesound.org/people/rhodesmas/sounds/324252/">1</a> and <a href="http://www.pacdv.com/sounds/ambience_sounds.html">2</a></p>
+
+                <p>Sound effects from <a href="https://freesound.org/people/Tritus/sounds/251418/">1</a>, <a href="https://freesound.org/people/cusconauta/sounds/219014/">2</a> and <a href="https://freesound.org/people/Andromadax24/sounds/186719/">3</a></p>
                </div>
             </div>
         </div>
@@ -37,12 +40,12 @@
         <div class="grid grid-pad">
             <div class="col-3-12">
                <div class="content">
-                <img class="appimage" align="middle" src="../images/send_idfa_icon175x175.png" alt=""/>
+                <a href="https://itunes.apple.com/us/app/send-idfa/id1067241937?mt=8"><img class="appimage" align="middle" src="../images/send_idfa_icon175x175.png" alt=""/></a>
                </div>
             </div>
             <div class="col-9-12">
                <div class="content">
-                Access IDFA on iOS.
+                <p>Access IDFA on iOS</p>
                </div>
             </div>
         </div>
