--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link rel="shortcut icon" href="..images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="..images/favicon.ico" type="image/x-icon">
     <title>LessonThree</title>
   </head>
 
