--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <div class="col-9-12">
                <div class="content">
                 <p>Diamond catching!</p>
-                <p>Music from <a href="https://freesound.org/people/rhodesmas/sounds/324252/">1</a> and <a href="http://www.pacdv.com/sounds/ambience_sounds.html">2</a></p>
-                <p>Sound effects from <a href="https://freesound.org/people/Tritus/sounds/251418/">1</a>, <a href="https://freesound.org/people/cusconauta/sounds/219014/">2</a> and <a href="https://freesound.org/people/Andromadax24/sounds/186719/">3</a></p>
+                <p>Music from <a href="https://freesound.org/people/rhodesmas/sounds/324252/">1</a> and <a href="http://www.pacdv.com/sounds/ambience_sounds.html">2</a>. Sound effects from <a href="https://freesound.org/people/Tritus/sounds/251418/">1</a>, <a href="https://freesound.org/people/cusconauta/sounds/219014/">2</a> and <a href="https://freesound.org/people/Andromadax24/sounds/186719/">3</a></p>
                 <p>Graphics from <a href="http://www.freepik.com/">1</a></p>
                </div>
             </div>
