--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
         <h1>404</h1>
         <p><strong>File not found</strong></p>
         
-        <a href="http://lessonthree.com">Back to main page</a>
+        <a href="http://lessonthree.com">Back to home</a>
 
         <footer>
           <a href="mailto:info@lessonthree.com">info@lessonthree.com</a>
