--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
         <div class="grid grid-pad">
             <div class="col-3-12">
                <div class="content">
+                <a href="https://itunes.apple.com/us/app/uutisotsikot/id1100188902?mt=8"><img class="appimage" align="middle" src="../images/uutisotsikot_icon175x175" alt=""/></a>
+               </div>
+            </div>
+            <div class="col-9-12">
+               <div class="content">
+                <p>Uutisotsikot - News headlines from the Finnish media delivered twice a day</p>
+               </div>
+            </div>
+        </div>
+
+        <div class="grid grid-pad">
+            <div class="col-3-12">
+               <div class="content">
                 <a href="https://itunes.apple.com/us/app/diamond-catch/id1070792509?mt=8"><img class="appimage" align="middle" src="../images/diamond_catch_icon175x175.png" alt=""/></a>
                </div>
             </div>
