--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="grid grid-pad">
             <div class="col-3-12">
                <div class="content">
-                <a href="https://itunes.apple.com/us/app/uutisotsikot/id1100188902?mt=8"><img class="appimage" align="middle" src="../images/uutisotsikot_icon175x175" alt=""/></a>
+                <a href="https://itunes.apple.com/us/app/uutisotsikot/id1100188902?mt=8"><img class="appimage" align="middle" src="../images/uutisotsikot_icon175x175.png" alt=""/></a>
                </div>
             </div>
             <div class="col-9-12">
