--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             </div>
             <div class="col-9-12">
                <div class="content">
-                <p>Uutisotsikot - News headlines from the Finnish media delivered twice a day</p>
+                <p>Uutisotsikot</p>
+                <p>News headlines from the Finnish media delivered twice a day</p>
                </div>
             </div>
         </div>
