--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
         <div class="grid grid-pad">
             <div class="col-3-12">
                <div class="content">
+                <a href="https://m.me/otsikot"><img class="appimage" align="middle" src="../images/uutisotsikot_bot_icon175x175" alt=""/></a>
+               </div>
+            </div>
+            <div class="col-9-12">
+               <div class="content">
+                <p>Uutisotsikot Facebook Messenger Bot</p>
+                <p>News headlines from the Finnish media delivered twice a day via a bot</p>
+                <p><a href="https://m.me/otsikot">m.me/otsikot</a></p>
+               </div>
+            </div>
+        </div>
+
+        <div class="grid grid-pad">
+            <div class="col-3-12">
+               <div class="content">
                 <a href="https://itunes.apple.com/us/app/uutisotsikot/id1100188902?mt=8"><img class="appimage" align="middle" src="../images/uutisotsikot_icon175x175.png" alt=""/></a>
                </div>
             </div>
