--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="grid grid-pad">
             <div class="col-3-12">
                <div class="content">
-                <a href="https://m.me/otsikot"><img class="appimage" align="middle" src="../images/uutisotsikot_bot_icon175x175" alt=""/></a>
+                <a href="https://m.me/otsikot"><img class="appimage" align="middle" src="../images/uutisotsikot_bot_icon175x175.png" alt=""/></a>
                </div>
             </div>
             <div class="col-9-12">
